# Tuney

./: .gitignore  README.md  pyproject.toml
config/: beets.yaml
scripts/: importprofile.py
scripts/agent-evals/: report.md
src/tuney/: __init__.py  cli.py  config.py  credentials.py  library.py  tui.py  wishlist.py
src/tuney/agents/: Agent.py  activity.py  collectionCleanupAgent.py  collectionSearchAgent.py  confirmation.py  supervisor.py  tools.py  wishlistAgent.py  wishlist_tools.py
src/tuney/tests/: test_wishlist.py
src/tuney/tui/: __init__.py  chat_state.py  layout.py  tui.py
src/tuney/tui/Modals/: AddWishlistItemModal.py  ConfirmModal.py  PaneChooserModal.py  ScanModal.py  SearchModal.py  TrackDetailModal.py  WishlistDetailModal.py  __init__.py
src/tuney/tui/Panes/: ChatPane.py  CollectionPane.py  SettingsPane.py  StatsBar.py  WishlistPane.py  __init__.py  base.py
src/tuney/tui/Screens/: ChatScreen.py  ChatScreen.tcss  CollectionScreen.py  MenuScreen.py  SearchScreen.py  SettingScreen.py  WorkspaceScreen.py  __init__.py
