[project]
name = "tuney"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "osereme", email = "reme.ibazebo@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "beets>=2.11.0",
    "deepagents>=0.6.12",
    "keyring>=25.7.0",
    "langchain>=1.3.11",
    "langchain-openai>=1.3.3",
    "langchain-openrouter>=0.2.5",
    "platformdirs>=4.10.0",
    "python-dotenv>=1.2.2",
    "textual>=8.2.7",
    "typer>=0.26.7",
]

[project.scripts]
tuney = "tuney.cli:app"

[build-system]
requires = ["uv_build>=0.11.23,<0.12.0"]
build-backend = "uv_build"
